# pombase-domain-process

./: Cargo.toml  README.md
etc/: run_and_process_interpro.sh
src/: main.rs
src/process/: interpro_parse.rs  lib.rs  segmasker.rs  segmasker_parse.rs  types.rs  util.rs
tests/: small.fa  small_matches.json  small_matches.tidy.xml  small_matches.tsv  small_segmasker_output.txt  tests.rs
