[package]
name = "pombase-domain-process"
version = "1.0.0"
authors = ["Kim Rutherford <kmr44@cam.ac.uk>"]

[lib]
name = "domain_process"
path = "src/process/lib.rs"

[dependencies]
getopts = "*"
xml-rs = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = "0.14"
tempfile = "2.1.6"
regex = "1.0"
