[package]
name = "pombase-domain-process"
version = "1.0.0"
authors = ["Kim Rutherford <kmr44@cam.ac.uk>"]

[lib]
name = "domain_process"
path = "src/process/lib.rs"

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true

[dependencies]
getopts = "0.2.21"
xml-rs = "0.8.21"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = "0.19.8"
tempfile = "3.12.0"
regex = "1.0"
