[package]
name = "pombase-domain-process"
version = "2.13.0"
authors = ["Kim Rutherford <kmr44@cam.ac.uk>"]
edition = "2021"

[lib]
name = "domain_process"
path = "src/process/lib.rs"

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true

[dependencies]
getopts = "0.2.21"
csv = "1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.0"
